--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
-    "name": "topthink/think-queue",
+    "name": "zsirius/think-queue",
     "description": "The ThinkPHP6 Queue Package",
-    "authors": [
-        {
-            "name": "yunwuxin",
-            "email": "448901948@qq.com"
-        }
-    ],
+    "authors": [{
+        "name": "zsirius",
+        "email": "707759383@qq.com"
+    }],
     "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
